--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>usecase</module>
         <module>tests</module>
         <module>repository</module>
+        <module>config</module>
+        <module>application/consoleApp</module>
     </modules>
     <packaging>pom</packaging>
 
