web-app module renamed to web

--- a/application-runner/pom.xml
+++ b/application-runner/pom.xml
@@ -10,7 +10,7 @@
 
     <modules>
         <module>console-app</module>
-        <module>web-app</module>
+        <module>web</module>
     </modules>
 
     <modelVersion>4.0.0</modelVersion>
